--- a/bin/install
+++ b/bin/install
@@ -3,9 +3,10 @@
 prefix=${1:-/usr/local/}
 
 binary=${prefix}/bin/cosy
-rockstree=${prefix}/share/cosy
+rockstree=${prefix}/local/cosy
 currentwd=$(pwd)
 tempwd=$(mktemp -d)
+log=$(mktemp)
 
 # Install dependencies:
 function install_dependencies ()
@@ -88,21 +89,56 @@ function install_main ()
   cat > ${binary} <<EOL
 #! /bin/sh
 
-export PATH=${rockstree}/bin:$PATH
 export LUA_PATH="${rockstree}/share/lua/5.1/?.lua;${rockstree}/share/lua/5.1/?/init.lua"
 export LUA_CPATH="${rockstree}/lib/lua/5.1/?.so"
-${rockstree}/bin/luajit ${rockstree}/share/lua/5.1/cosy/cli/init.lua $*
+export COSY_PREFIX="${prefix}"
+
+${rockstree}/bin/luajit ${rockstree}/share/lua/5.1/cosy/cli/init.lua \$*
 EOL
   chmod a+x ${binary}
 }
 
+function install_configuration ()
+{
+  mkdir -p ${prefix}/etc
+  cat > ${prefix}/etc/cosy.conf <<EOL
+return {
+  http  = {
+    nginx = "/usr/sbin/nginx",
+    port  = 8080,
+  },
+  cli = {
+    server = "http://127.0.0.1:8080/"
+  },
+}
+EOL
+}
+
+function error ()
+{
+  echo "An error happened."
+  echo "Please read log file: ${log}"
+  exit 1
+}
+trap error ERR
+
 mkdir -p ${prefix}
 mkdir -p ${prefix}/bin
 cd ${tempwd}
-install_dependencies
-install_luajit
-install_luarocks
-install_cosyverif
-install_main
+echo "Installing dependencies..."
+install_dependencies  >> ${log} 2>&1
+echo "Installing luajit..."
+install_luajit        >> ${log} 2>&1
+echo "Installing luarocks..."
+install_luarocks      >> ${log} 2>&1
+echo "Installing cosyverif..."
+install_cosyverif     >> ${log} 2>&1
+echo "Installing launcher..."
+install_main          >> ${log} 2>&1
+echo "Installing configuration..."
+install_configuration >> ${log} 2>&1
 cd ${currentwd}
 rm -rf ${tempwd}
+rm -f  ${log}
+
+echo "You can now run cosy commands using: ${prefix}/bin/cosy"
