--- a/bin/install
+++ b/bin/install
@@ -11,7 +11,7 @@ log=$(mktemp)
 # Install dependencies:
 function install_dependencies ()
 {
-  sudo apt-get install git make gcc diffutils patch \
+  sudo apt-get install git make gcc diffutils patch wget \
                        libev-dev libssl-dev libgeoip-dev \
                        nginx-extras lua-nginx-redis redis-server
 }
