--- a/bin/install
+++ b/bin/install
@@ -62,6 +62,10 @@ echo "MODE='${MODE}'"
 
 if [ ! -z ${SERVER+x} ] && [ ! -z ${CLIENT+x} ]; then
   echo "FATAL: incompatible options --server and --client'"
+  echo "Usages: "
+  echo "     install --prefix=\${TARGET_PATH} --client"
+  echo "     install --prefix=\${TARGET_PATH} --server"
+  echo "     install --sourcepath=\${TARGET_PATH} --server"
   exit 1;
 else
   echo "SERVER or CLIENT is unset";
@@ -198,7 +202,6 @@ function install_cosyverif ()
 {
   git clone https://github.com/saucisson/lua-websockets.git
   git clone https://github.com/nrk/redis-lua.git
-#  git clone https://github.com/CosyVerif/library.git
   ${rockstree}/bin/luarocks install --tree=${rockstree} cosyverif
   rm -rf ${rockstree}/share/lua/5.1/redis*
   cp     ${tempwd}/redis-lua/src/redis.lua          ${rockstree}/share/lua/5.1/
@@ -206,13 +209,16 @@ function install_cosyverif ()
   cp     ${tempwd}/lua-websockets/src/websocket.lua ${rockstree}/share/lua/5.1/
   cp -r  ${tempwd}/lua-websockets/src/websocket     ${rockstree}/share/lua/5.1/
   rm -rf ${rockstree}/share/lua/5.1/cosy*
-###### 20151007 in order to be able to use your cosy sources that you are editing 
+###### 20151007 in order to be able to use your cosy sources that you are editing
   if [ -z ${SOURCEPATH+x} ]; then
     echo "Setting a user version to path ${tempwd}/library/src/cosy"
+    ## In the standard user mode : get the official version of cosy
+    git clone https://github.com/CosyVerif/library.git
     cp -r  ${tempwd}/library/src/cosy                 ${rockstree}/share/lua/5.1/
     echo "SOURCEPATH is unset";
   else
     echo "Setting a development version to path '{$SOURCEPATH}'"
+    ## In the developper mode : use the version of cosy provided by the SOURCEPATH
     ln -s ${SOURCEPATH}/library/src/cosy                          ${rockstree}/share/lua/5.1/
     echo "SOURCEPATH is set to '${SOURCEPATH}'";
   fi
