--- a/bin/install
+++ b/bin/install
@@ -135,14 +135,11 @@ log=$(mktemp)
 function install_dependencies ()
 {
   echo "Installing packages required by both client and server"
-  sudo apt-get install git make gcc diffutils patch wget 
+  sudo apt-get install git make gcc diffutils patch wget unzip
 
-  if [ ! -z ${SERVER+x} ]; then
-    echo "Installing packages required only by the server"
-    sudo apt-get install libev-dev libssl-dev libgeoip-dev \
+#  echo "Installing packages required only by the server" 
+  sudo apt-get install libev-dev libssl-dev libgeoip-dev \
                        nginx-extras lua-nginx-redis redis-server
-    echo "done";
-  fi
 }
 
 # Install LuaJIT with 5.2 compatibility:
