--- a/bin/install
+++ b/bin/install
@@ -254,29 +254,31 @@ EOF
 ${paths}
 export COSY_PREFIX="${prefix}"
 
-currentdir=\$(pwd)
-tmpdir=\$(mktemp -d)
-cd  \${tmpdir}
-${rockstree}/5.1/bin/luajit ${rockstree}/5.1/share/lua/5.1/cosy/check/init.lua "\$@"
-echo
-echo -e "TAP report and Coverage are in ${green}\${tmpdir}${nc}."
-cd  \${currentdir}
+(
+  tmpdir=\${1:-\$(mktemp -d)}
+  shift
+  cd  "\${tmpdir}" || exit
+  ${rockstree}/5.1/bin/luajit ${rockstree}/5.1/share/lua/5.1/cosy/check/init.lua "\$@"
+  echo
+  echo -e "TAP report and Coverage are in ${green}\${tmpdir}${nc}."
+)
 EOF
     chmod a+x "${check}"
 
-  cat > "${rockspec}" <<EOF
+    cat > "${rockspec}" <<EOF
 #! /bin/bash
 
 ${paths}
 export COSY_PREFIX="${prefix}"
 
-currentdir=\$(pwd)
-tmpdir=\$(mktemp -d)
-cd  \${tmpdir}
-${rockstree}/5.1/bin/luajit ${rockstree}/5.1/share/lua/5.1/cosy/rockspec/init.lua "\$@"
-echo
-echo -e "Rockspec is in ${green}\${tmpdir}${nc}."
-cd  \${currentdir}
+(
+  tmpdir=\${1:-\$(mktemp -d)}
+  shift
+  cd  "\${tmpdir} "|| exit
+  ${rockstree}/5.1/bin/luajit ${rockstree}/5.1/share/lua/5.1/cosy/rockspec/init.lua "\$@"
+  echo
+  echo -e "Rockspec is in ${green}\${tmpdir}${nc}."
+)
 EOF
     chmod a+x "${rockspec}"
   fi
