--- a/bin/install
+++ b/bin/install
@@ -66,6 +66,7 @@ nc='\033[0m'
 
 ## Now cmd args have been parsed
 ##################################
+
 versions="5.2"
 cosy=${prefix}/bin/cosy
 check=${prefix}/bin/cosy-check
@@ -100,11 +101,11 @@ function stop_server ()
 # Install dependencies:
 function install_dependencies ()
 {
-  echo "Installing packages required by both client and server"
+  echo "Installing packages required by both client and server."
   sudo apt-get install --yes git make gcc diffutils patch wget unzip \
     >> "${log}" 2>&1
 
-  echo "Installing packages required only by the server"
+  echo "Installing packages required only by the server."
   sudo apt-get install --yes libev-dev libssl-dev \
                              nginx-extras redis-server imagemagick \
     >> "${log}" 2>&1
@@ -112,7 +113,7 @@ function install_dependencies ()
   if [ ! -z "${sourcepath+x}" ]; then
     for version in ${versions}
     do
-      echo "Installing lua-${version}"
+      echo "Installing lua-${version}."
       sudo apt-get install --yes  lua${versions} liblua${version}-dev \
         >> "${log}" 2>&1
     done
@@ -279,7 +280,6 @@ function install_cosyverif ()
       } >> "${log}" 2>&1
     fi
   done
-
 }
 
 function install_main ()
@@ -343,7 +343,7 @@ EOF
 
 function install_configuration ()
 {
-  echo -e "Installing configuration in ${green}${prefix}/etc/cosy.conf${nc}"
+  echo -e "Installing configuration in ${green}${prefix}/etc/cosy.conf${nc}."
   mkdir -p "${prefix}/etc"
   cat > "${prefix}/etc/cosy.conf" <<EOL
 return {
@@ -380,4 +380,12 @@ cd "${currentwd}"
 rm -rf "${tempwd}"
 rm -f  "${log}"
 
-echo "You can now run cosy commands using: ${prefix}/bin/cosy"
+echo "You can now try the following commands:"
+echo "- ${prefix}/bin/cosy server:start [--clean] [--force]"
+echo "- ${prefix}/bin/cosy"
+echo "- ${prefix}/bin/cosy server:stop"
+if [ ! -z "${sourcepath+x}" ]; then
+  echo "This development environment also provides two commands:"
+  echo "- ${prefix}/bin/cosy-check    : to run checks, tests and coverage"
+  echo "- ${prefix}/bin/cosy-rockspec : to generate rockspec"
+fi
