--- a/bin/install
+++ b/bin/install
@@ -260,18 +260,17 @@ function install_cosyverif ()
     echo "Installing rocks for lua-${version}."
     if [ -d "${rockstree}/${version}/share/lua/${version}" ]; then
       # Remove symlink to cosy to avoid modification of ${sourcepath} files by luarocks.
-      rm -rf "${rockstree}/${version}/share/lua/${version}/cosy"*
-      "${rockstree}/${version}/bin/luarocks" install cosyverif \
-        >> "${log}" 2>&1
       rm -rf "${rockstree}/${version}/share/lua/${version}/redis"*
+      rm -rf "${rockstree}/${version}/share/lua/${version}/websocket"*
+      rm -rf "${rockstree}/${version}/share/lua/${version}/cosy"*
+      "${rockstree}/${version}/bin/luarocks" install --only-deps cosyverif \
+        >> "${log}" 2>&1
       ln -s  "${rockstree}/git/redis-lua/src/redis.lua" \
              "${rockstree}/${version}/share/lua/${version}/redis.lua"
-      rm -rf "${rockstree}/${version}/share/lua/${version}/websocket"*
       ln -s  "${rockstree}/git/lua-websockets/src/websocket.lua" \
              "${rockstree}/${version}/share/lua/${version}/websocket.lua"
       ln -s  "${rockstree}/git/lua-websockets/src/websocket" \
              "${rockstree}/${version}/share/lua/${version}/websocket"
-      rm -rf "${rockstree}/${version}/share/lua/${version}/cosy"*
       ln -s  "${rockstree}/git/library/src/cosy" \
              "${rockstree}/${version}/share/lua/${version}/cosy"
     fi
