--- a/bin/install
+++ b/bin/install
@@ -101,26 +101,49 @@ function stop_server ()
 # Install dependencies:
 function install_dependencies ()
 {
-  echo "Installing packages required by both client and server."
-  sudo apt-get install --yes git make gcc diffutils patch wget unzip \
-    >> "${log}" 2>&1
+  # check if apt is available:
+  if command -v apt-get; then
+    if sudo apt-get update; then
+      apt_available=true
+    fi
+  fi >> "${log}" 2>&1
 
-  echo "Installing packages required only by the server."
-  sudo apt-get install --yes libev-dev libssl-dev \
-                             nginx-extras redis-server imagemagick \
-    >> "${log}" 2>&1
+  if [ ! -z "${apt_available+x}" ]; then
+    echo "Installing packages required by both client and server."
+    sudo apt-get install --yes git make gcc diffutils patch wget unzip \
+      >> "${log}" 2>&1
+
+    echo "Installing packages required only by the server."
+    sudo apt-get install --yes libev-dev libssl-dev \
+                               nginx-extras redis-server imagemagick \
+      >> "${log}" 2>&1
+  else
+    echo "Not installing packages as apt-get or sudo is not available."
+  fi
 
   if [ ! -z "${sourcepath+x}" ]; then
+    if [ ! -z "${apt_available+x}" ]; then
+      echo "Developper mode requires a working version of apt and sudo."
+    fi
     for version in ${versions}
     do
       echo "Installing lua-${version}."
-      sudo apt-get install --yes  lua${versions} liblua${version}-dev \
-        >> "${log}" 2>&1
-
-      echo "Installing developper tools."
-      sudo apt-get install --yes  shellcheck \
+      sudo apt-get install --yes lua${versions} liblua${version}-dev \
         >> "${log}" 2>&1
     done
+    echo "Installing developper tools."
+    if [ "$(apt-cache search shellcheck | grep shellcheck)" != "" ]; then
+      sudo apt-get install --yes shellcheck \
+        >> "${log}" 2>&1
+    else
+    { # this is a special case for ubuntu precise, used by shippable CI:
+      sudo apt-get install --yes ghc libghc-parsec3-dev libghc-json-dev \
+                                 libghc-regex-compat-dev libghc-quickcheck2-dev \
+                                 cabal-install
+      cabal update
+      cabal install --global --root-cmd=sudo shellcheck
+    } >> "${log}" 2>&1
+    fi
   fi
 }
 
