Update bin/install to create script cosy-server.

--- a/bin/install
+++ b/bin/install
@@ -72,7 +72,8 @@ nc='\033[0m'
 ##################################
 
 versions="5.2"
-cosy=${prefix}/bin/cosy
+cli=${prefix}/bin/cosy
+server=${prefix}/bin/cosy-server
 check=${prefix}/bin/cosy-check
 rockspec=${prefix}/bin/cosy-rockspec
 rockstree=${prefix}/local/cosy
@@ -93,11 +94,11 @@ fi
 # Stop existing server:
 function stop_server ()
 {
-  if [ -e "${cosy}" ]; then
+  if [ -e "${cli}" ]; then
     echo "Stopping running server."
     {
-      ${cosy} server:stop --force
-      ${cosy} daemon:stop --force
+      ${server} --force stop
+      ${cli} daemon:stop --force
     } >> "${log}" 2>&1
   fi
 }
@@ -321,7 +322,7 @@ export LUA_PATH="${rockstree}/5.1/share/lua/5.1/?.lua;${rockstree}/5.1/share/lua
 export LUA_CPATH="${rockstree}/5.1/lib/lua/5.1/?.so"
 EOF
 
-  cat > "${cosy}" <<EOF
+  cat > "${cli}" <<EOF
 #! /bin/sh
 
 ${paths}
@@ -329,7 +330,17 @@ export COSY_PREFIX="${prefix}"
 
 ${rockstree}/5.1/bin/luajit ${rockstree}/5.1/share/lua/5.1/cosy/cli/runner.lua "\$@"
 EOF
-  chmod a+x "${cosy}"
+  chmod a+x "${cli}"
+
+  cat > "${server}" <<EOF
+#! /bin/sh
+
+${paths}
+export COSY_PREFIX="${prefix}"
+
+${rockstree}/5.1/bin/luajit ${rockstree}/5.1/share/lua/5.1/cosy/server/runner.lua "\$@"
+EOF
+  chmod a+x "${server}"
 
   if [ ! -z "${sourcepath+x}" ]; then
     cat > "${check}" <<EOF
@@ -423,9 +434,9 @@ install_configuration
 cd "${currentwd}"
 
 echo "You can now try the following commands:"
-echo "- ${prefix}/bin/cosy server:start [--clean] [--force]"
+echo "- ${prefix}/bin/cosy-server [--clean] [--force] start"
 echo "- ${prefix}/bin/cosy"
-echo "- ${prefix}/bin/cosy server:stop"
+echo "- ${prefix}/bin/cosy-server [--force] stop"
 if [ ! -z "${sourcepath+x}" ]; then
   echo "This development environment also provides two commands:"
   echo "- ${prefix}/bin/cosy-check    : to run checks, tests and coverage"
