--- a/bin/install
+++ b/bin/install
@@ -338,7 +338,7 @@ EOF
 ${paths}
 export COSY_PREFIX="${prefix}"
 
-${rockstree}/5.1/bin/luajit ${rockstree}/5.1/share/lua/5.1/cosy/server/runner.lua "\$@"
+${rockstree}/5.1/bin/luajit ${rockstree}/5.1/share/lua/5.1/cosy/server/cli.lua "\$@"
 EOF
   chmod a+x "${server}"
 
